--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <flatten-maven.version>1.3.0</flatten-maven.version>
         <maven.exec.version>3.1.0</maven.exec.version>
         <guava.version>33.0.0-jre</guava.version>
+        <commons-net.version>3.8.0</commons-net.version>
         <selenium-java.version>4.19.1</selenium-java.version>
         <angus-mail.version>2.0.3</angus-mail.version>
         <mysql-connector-j.version>8.2.0</mysql-connector-j.version>
