--- a/core/core-frontend/package.json
+++ b/core/core-frontend/package.json
@@ -67,6 +67,8 @@
     "xss": "^1.0.14"
   },
   "devDependencies": {
+    "@intlify/message-compiler": "9.14.2",
+    "@intlify/shared": "9.14.2",
     "@intlify/unplugin-vue-i18n": "^0.8.2",
     "@types/element-resize-detector": "^1.1.3",
     "@types/jquery": "^3.5.16",
