--- a/core/core-frontend/package.json
+++ b/core/core-frontend/package.json
@@ -67,8 +67,6 @@
     "xss": "^1.0.14"
   },
   "devDependencies": {
-    "@intlify/message-compiler": "9.14.2",
-    "@intlify/shared": "9.14.2",
     "@intlify/unplugin-vue-i18n": "^0.8.2",
     "@types/element-resize-detector": "^1.1.3",
     "@types/jquery": "^3.5.16",
@@ -113,5 +111,12 @@
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^1.0.24",
     "xss": "^1.0.14"
+  },
+  "overrides": {
+    "@intlify/message-compiler": "9.14.2",
+    "@intlify/shared": "9.14.2",
+    "glob": {
+      "inflight": "npm:inflight-lru@^1.0.0"
+    }
   }
 }
