--- a/installer/dataease/templates/my.cnf
+++ b/installer/dataease/templates/my.cnf
@@ -15,6 +15,7 @@ innodb_flush_method=O_DIRECT
 innodb_lock_wait_timeout=1800
 innodb_flush_log_at_trx_commit=0
 sync_binlog=0
+binlog_expire_logs_seconds=432000
 
 sql_mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION
 
